src/test/ui/span/wf-method-late-bound-regions.nll.stderr
error[E0597]: `pointer` does not live long enough
  --> $DIR/wf-method-late-bound-regions.rs:30:18
   |
LL |         f2.xmute(&pointer)
   |                  ^^^^^^^^ borrowed value does not live long enough
LL |     };
   |     - `pointer` dropped here while still borrowed
LL |     //~^^ ERROR `pointer` does not live long enough
LL |     println!("{}", dangling);
   |                    -------- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
